# wd-security

./: .gitattributes  .gitignore  00-wd-security.rules.in  GEN-DEB-CHANGELOG.sh  GEN-VERSION.sh  INSTALL  INSTALL.md  Makefile.am  README.md  compat.c  compat.h  configure.ac  encoding.c  encoding.h  wd-security-cli.c  wd-security-devices.sh  wd-security.c  wd-security.h
.github/workflows/: build.yaml  manual.yaml
debian/: changelog.in  control.in  copyright.in  libwd-security0-dev.install  libwd-security0.install  libwd-security0.symbols  not-installed  rules  wd-security.install
doc/: wd-security.adoc.in
